--- a/assignment.css
+++ b/assignment.css
@@ -152,6 +152,12 @@ font-size:16px;
 	padding:50px 12px 12px 60px;
 }
 @media only screen and (max-width:768px){
+.container{
+	width:100%;
+}
+#header{
+	margin:0px;
+}
 #title{
 	padding:0px 25px 20px 5px;
 }
