--- a/assignment.css
+++ b/assignment.css
@@ -1,7 +1,7 @@
 #header{
 margin:5px 74px 0px 55px;
-    background-color: #1b3ea6;
-  background-image: linear-gradient(-50deg, #1b3ea6, #5bbbfa);
+    background-color: red;
+ 
 }
 
 #menu{
