--- a/assignment.css
+++ b/assignment.css
@@ -156,8 +156,10 @@ font-size:16px;
 	width:100%;
 }
 #header{
-	margin:0px;
+margin:5px 20px 0px 20px;
+    background-color: red;
 }
+
 #title{
 	padding:0px 25px 20px 5px;
 }
